Atualiza caminho de redirecionamento no index.html

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         function switchToAvatars() {
             // Atualizando o caminho para usar a URL base do GitHub Pages
-            window.location.href = './docs/html/html/student-onboarding-instructions.html';
+            window.location.href = 'student-onboarding-instructions.html';
         }
 
         function goBack() {
