Corrige caminhos de recursos e redirecionamento

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
     <!-- Perfect Scrollbar -->
-    <link type="text/css" href="./public/vendor/perfect-scrollbar.css" rel="stylesheet">
+    <link type="text/css" href="/interfacelms/public/vendor/perfect-scrollbar.css" rel="stylesheet">
 
     <!-- Material Design Icons -->
     <link type="text/css" href="./public/css/material-icons.css" rel="stylesheet">
@@ -129,13 +129,14 @@
         }
 
         function switchToAvatars() {
-            // Atualizando o caminho para usar a URL base do GitHub Pages
-            window.location.href = 'student-onboarding-instructions.html';
+            window.location.href = '/interfacelms/student-onboarding-instructions.html';
         }
 
         function goBack() {
             window.history.back();
         }
     </script>
+
+    <base href="/interfacelms/">
 </body>
 </html>
